plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'io.github.ladysnake.chenille' version "${chenille_version}"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

chenille {
    customLicense = rootProject.file("LICENSE")
    github = new URL("https://github.com/MoriyaShiine/extra-origins")
    javaVersion = 21
    configurePublishing {
        withLadysnakeMaven()
        withGithubRelease()
        withModrinthRelease()
        withCurseforgeRelease()
    }
}

repositories {
    maven {
        name "ladysnake"
        url "https://maven.ladysnake.org/releases"
    }
    chenille.repositories.shedaniel()
    chenille.repositories.terraformers()
    chenille.repositories.quiltMC()
    maven {
        name "carpet"
        url "https://masa.dy.fi/maven"
    }
    chenille.repositories.modrinth()
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
    modImplementation "io.github.apace100:origins-fabric:${origins_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}